--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -25,20 +27,20 @@
                 </button>
             </div>
 
-            <div class="weather-data">
+            <div class="weather-data hide">
 
                 <h2>
                     <i class="fa-solid fa-location-dot"></i>
-                    <span id="city">Volta Redonda</span>
+                    <span id="city"></span>
                     <img src="https://www.countryflagicons.com/FLAT/32/BR.png" alt="bandeira-do-país" id="pais">
                 </h2>
 
                 <p id="temperatura">
-                    <span>17</span>°C
+                    <span></span>°C
                 </p>
                 
                 <div class="conteiner-descricao">
-                    <p id="descricao">Nublado</p>
+                    <p id="descricao"></p>
                     <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="condição-do-tempo" id="weather-icon">
                 </div>
 
@@ -46,12 +48,12 @@
 
                     <p id="umidade">
                         <i class="fa-solid fa-droplet"></fa-solid></i>
-                        <span>23%</span>
+                        <span></span>
                     </p>
 
                     <p id="vento">
                         <i class="fa-solid fa-wind"></fa-solid></i>
-                        <span>4km/h</span>
+                        <span></span>
                     </p>
 
                 </div>
